basic interface finished

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,13 @@
 <div class="grid">
     <mat-grid-list cols="4" rowHeight="2:1">
         
-        <mat-grid-tile [colspan]=4></mat-grid-tile>
+        <mat-grid-tile [colspan]=3>
+                <mat-form-field class="textBox">
+                        <input matInput disabled value={{exp}}>
+                      </mat-form-field>
+        </mat-grid-tile>
+
+        <mat-grid-tile><button mat-raised-button color="accent"class="btn">←</button></mat-grid-tile>
 
         <mat-grid-tile><button mat-raised-button class="btn">P</button></mat-grid-tile>
         <mat-grid-tile><button mat-raised-button class="btn">Q</button></mat-grid-tile>
@@ -12,9 +18,12 @@
         <mat-grid-tile><button mat-raised-button class="btn">v</button></mat-grid-tile>
         <mat-grid-tile><button mat-raised-button class="btn">→</button></mat-grid-tile>
         <mat-grid-tile><button mat-raised-button class="btn">↔</button></mat-grid-tile>
-        <mat-grid-tile [colspan]=2><button mat-raised-button class="btn">~</button></mat-grid-tile>
+        <mat-grid-tile><button mat-raised-button class="btn">~</button></mat-grid-tile>
 
-        <mat-grid-tile [colspan]="2"><button mat-raised-button class="btn" color="primary">↓</button></mat-grid-tile>
+        <mat-grid-tile><button mat-raised-button class="btn">(</button></mat-grid-tile>
+        <mat-grid-tile><button mat-raised-button class="btn">)</button></mat-grid-tile>
+
+        <mat-grid-tile><button mat-raised-button class="btn" color="primary">↓</button></mat-grid-tile>
         
 
 
