Can evaluate full truth table

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,8 +9,8 @@
 
         <mat-grid-tile><button mat-raised-button color="accent"class="btn" (click)="write('←')">←</button></mat-grid-tile>
 
-        <mat-grid-tile><button mat-raised-button class="btn" (click)="write('P')">P</button></mat-grid-tile>
-        <mat-grid-tile><button mat-raised-button class="btn" (click)="write('Q')">Q</button></mat-grid-tile>
+        <mat-grid-tile><button mat-raised-button class="btn" (click)="write('1')">1</button></mat-grid-tile>
+        <mat-grid-tile><button mat-raised-button class="btn" (click)="write('0')">0</button></mat-grid-tile>
         <mat-grid-tile><button mat-raised-button class="btn" (click)="write('R')">R</button></mat-grid-tile>
         <mat-grid-tile><button mat-raised-button class="btn" (click)="write('S')">S</button></mat-grid-tile>
 
