--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -12,3 +12,13 @@
     width: 80%;
     font-size: 4vw;
 }
+.table{
+    margin: 0 auto;
+    align-content: center;
+    text-align: center;
+    width: 100%;
+    max-width: 800px;
+}
+th{
+    text-align: center;
+}
